--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
