--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@justinaus/vue-components": "^0.1.16",
     "axios": "^0.19.0",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
@@ -34,6 +35,7 @@
     ],
     "rules": {
       "no-unused-vars": "off",
+      "no-unused-components": "off",
       "no-console": "off"
     },
     "parserOptions": {
