--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     ],
     "rules": {
       "no-unused-vars": "off",
-      "no-unused-components": "off",
+      "vue/no-unused-components": "off",
       "no-console": "off"
     },
     "parserOptions": {
