--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^2.6.5",
+    "v-scroll-lock": "^1.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
