--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@justinaus/vue-components": "^0.1.16",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^2.6.5",
+    "eslint-plugin-prettier": "^3.1.1",
     "jodash": "^1.0.7",
     "v-scroll-lock": "^1.1.0",
     "vue": "^2.6.10",
@@ -26,24 +28,6 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {
-      "no-unused-vars": "off",
-      "vue/no-unused-components": "off",
-      "no-console": "off"
-    },
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
   },
   "postcss": {
     "plugins": {
