--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^2.6.5",
     "jodash": "^1.2.0",
+    "query-string": "^6.10.1",
     "v-scroll-lock": "^1.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
